<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".InterfacePrincipal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ttl_login"
        android:id="@+id/tvTitulo"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ttl_nome"
        android:id="@+id/tvNome"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="72dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ttl_senha"
        android:id="@+id/tvSenha"
        android:layout_below="@+id/tvNome"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/tvNome"
        android:layout_alignEnd="@+id/tvNome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"
        android:layout_above="@+id/tvSenha"
        android:layout_alignLeft="@+id/tvTitulo"
        android:layout_alignStart="@+id/tvTitulo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        android:id="@+id/edtSenha"
        android:layout_alignBottom="@+id/tvSenha"
        android:layout_alignLeft="@+id/edtNome"
        android:layout_alignStart="@+id/edtNome" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ttl_ok"
        android:id="@+id/btLogin"
        android:layout_below="@+id/edtSenha"
        android:onClick="executaLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Vai"
        android:onClick="vai"
        android:id="@+id/button2"
        android:layout_below="@+id/btLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Alterna Activity"
        android:id="@+id/button3"
        android:onClick="trocaActivity"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="7dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ttl_busca_campos"
        android:id="@+id/button5"
        android:onClick="buscaCampos"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />


</RelativeLayout>
